Popup. Fix case when target is hidden by scrollParent

--- a/demo/src/components/popup/popupView.scss
+++ b/demo/src/components/popup/popupView.scss
@@ -35,6 +35,7 @@
 
   > div {
     height: 140px;
+    width: calc(100% + 100px);
   }
 }
 
